updated react-native-view-pdf to latest version, updated ios script for iPad Pro

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "ios:air:4": "react-native run-ios --simulator=\"iPad Air (4th generation)\"",
     "ios:pro:9": "react-native run-ios --simulator=\"iPad Pro (9.7-inch)\"",
     "ios:pro:10": "react-native run-ios --simulator=\"iPad Pro (10.5-inch)\"",
-    "ios:pro:11:2": "react-native run-ios --simulator=\"iPad Pro (11-inch) (2nd generation)\"",
-    "ios:pro:12": "react-native run-ios --simulator=\"iPad Pro (12.9-inch) (4th generation)\"",
+    "ios:pro:11:2": "react-native run-ios --simulator=\"iPad Pro (11-inch) (3rd generation)\"",
+    "ios:pro:12": "react-native run-ios --simulator=\"iPad Pro (12.9-inch) (5th generation)\"",
     "fix:collapsible:js": "cp ./fixes/react-native-collapsible--collapsible ./node_modules/react-native-collapsible/Collapsible.js",
     "fix:image:picker": "cp ./fixes/react-native-image-crop-picker--imageCropPicker ./node_modules/react-native-image-crop-picker/ios/src/imageCropPicker.m",
     "fix:collapsible:accordion": "cp ./fixes/react-native-collapsible--accordion ./node_modules/react-native-collapsible/Accordion.js",
@@ -119,7 +119,7 @@
     "react-native-text-size": "4.0.0-rc.1",
     "react-native-user-inactivity": "1.2.0",
     "react-native-vector-icons": "9.0.0",
-    "react-native-view-pdf": "0.11.0",
+    "react-native-view-pdf": "0.13.2",
     "react-native-walkthrough-tooltip": "1.3.0",
     "react-redux": "7.2.6",
     "redux": "4.1.2",
