--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "react-native-vector-icons": "9.0.0",
     "react-native-view-pdf": "0.13.2",
     "react-native-walkthrough-tooltip": "1.3.0",
+    "react-native-webview": "11.23.1",
     "react-redux": "7.2.6",
     "redux": "4.1.2",
     "redux-devtools-extension": "2.13.9",
