updated run script

--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "ios:8": "react-native run-ios --simulator=\"iPad (8th generation)\"",
     "ios:15": "react-native run-ios --simulator=\"iPad (9th generation)\"",
     "ios:air:3": "react-native run-ios --simulator=\"iPad Air (3rd generation)\"",
-    "ios:air:4": "react-native run-ios --simulator=\"iPad Air (4th generation)\"",
+    "ios:air:5": "react-native run-ios --simulator=\"iPad Air (5th generation)\"",
     "ios:pro:9": "react-native run-ios --simulator=\"iPad Pro (9.7-inch)\"",
     "ios:pro:10": "react-native run-ios --simulator=\"iPad Pro (10.5-inch)\"",
-    "ios:pro:11:2": "react-native run-ios --simulator=\"iPad Pro (11-inch) (3rd generation)\"",
+    "ios:pro:11": "react-native run-ios --simulator=\"iPad Pro (11-inch) (3rd generation)\"",
     "ios:pro:12": "react-native run-ios --simulator=\"iPad Pro (12.9-inch) (5th generation)\"",
+    "ios:pro:12:2": "react-native run-ios --simulator=\"iPad Pro (12.9-inch) (2nd generation)\"",
     "fix:collapsible:js": "cp ./fixes/react-native-collapsible--collapsible ./node_modules/react-native-collapsible/Collapsible.js",
     "fix:image:picker": "cp ./fixes/react-native-image-crop-picker--imageCropPicker ./node_modules/react-native-image-crop-picker/ios/src/imageCropPicker.m",
     "fix:collapsible:accordion": "cp ./fixes/react-native-collapsible--accordion ./node_modules/react-native-collapsible/Accordion.js",
