--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
       - develop
       - staging
       - Pre-production
-      - DEV
+      - feature/etb-ntb-hybrid
 
   pull_request: 
     branches: 
@@ -15,13 +15,13 @@ on:
       - develop
       - staging
       - Pre-production
-      - DEV
+      - feature/etb-ntb-hybrid
 
   workflow_dispatch:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -29,12 +29,33 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-      - name: Install dependencies
-        run: npm install
+      - name: Install yarn 
+        run: brew install -g yarn 
+
+      - name: Install NPM packages
+        run: yarn
+
+      - name: Install pods  
+        run:  yarn install:pods
+
       - name: Run test 
         run: npm test
+
       - name: Test prompt 
         run: echo "test has been executed"
+
+      - name: Build iOS app
+        run: |
+          cd ios
+          xcodebuild archive -workspace KenangaMobile.xcworkspace -scheme KenangaMobile -configuration Release -archivePath ios/KenangaMobile.xcarchive
+
+      - name: Store artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: Archive of KenangaMobile app 
+          path: ios/KenangaMobile.xcarchive
+      
+
       
   sonarqube:
     name: Sonarqube scan
@@ -47,8 +68,9 @@ jobs:
         uses: sonarsource/sonarqube-scan-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}  
-          SONAR_TOKEN: ${{ secrets.SONAR_EC2_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
 
   DeployDev:
     name: Deploy to DEV Environment
